# natson

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  roadmap.md
.github/: dependabot.yml
.github/workflows/: ci.yml
booking/: README.md  booking_direct.py  discover_refresh.py  firecrawl_may.py  firecrawl_test.py  probe_compset_search.py
browser-api/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  requirements.txt  server.py
browser-api/examples/: authed_scrape.py  lighthouse_login.py
db/: README.md  bootstrap-app-roles.sh  migrate.sh  sync-db.sh
db/init/: 00_extensions.sql  01_metabase_db.sh  02_scrape_jobs.sql
db/migrations/: 0001_schema_migrations.sql  0002_extensions.sql  0003_dimensions.sql  0004_scrape_runs.sql  0005_facts.sql  0006_partitions_bootstrap.sql  0007_partition_automation.sql  0008_seed_subjects.sql  0009_subject_subscription_id.sql  0010_views.sql  0011_scrape_runs_loosen_fk.sql  0012_rate_grid_view.sql  0013_trim_name.sql  0014_stale_scrape_jobs_sweep.sql  0015_rate_grid_last_updated.sql  0016_auth_schema.sql  0017_better_auth_tables.sql  0018_allowed_domains.sql  0019_resumed_to_job_id.sql  0020_tighten_stale_sweep.sql  0021_grant_resume_write.sql  0022_grant_kill_columns.sql
deploy/: Caddyfile  README.md  docker-compose.prod.yml
jobs-api/: .dockerignore  Dockerfile  server.py
jobs-api/tests/: conftest.py  test_server.py
metabase/: provision.py
postgres/: Dockerfile  postgresql.conf
research/: rate-db-client-summary.docx  rate-tracking-schema-v3.md
scraper/: .dockerignore  Dockerfile  admin.py  api.md  compare_month.py  compare_one_day.py  config.py  hotels.json  login.py  login_daemon.py  reconcile.py  refresh.py  requirements.txt  run_job.py  scrape.py  scraper.config.yml  snapshot.py  subject_hotels.json
scraper/db/: __init__.py  connection.py  ingest.py  jobs.py  mapping.py  (+1 more)
web/: .dockerignore  .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
(+62 files in other folders)
